--- a/EntityFrameworkCore.LibSql/EntityFrameworkCore.LibSql.csproj
+++ b/EntityFrameworkCore.LibSql/EntityFrameworkCore.LibSql.csproj
@@ -15,8 +15,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.5" />
-        <PackageReference Include="Libsql.Client" Version="0.3.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore"         Version="8.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.0" />
+        <PackageReference Include="Libsql.Client"                         Version="0.3.0" />
     </ItemGroup>
 
 </Project>
