--- a/EntityFrameworkCore.LibSql/EntityFrameworkCore.LibSql.csproj
+++ b/EntityFrameworkCore.LibSql/EntityFrameworkCore.LibSql.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
@@ -15,9 +15,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore"         Version="8.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.0" />
-        <PackageReference Include="Libsql.Client"                         Version="0.3.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Libsql.Client\Libsql.Client.csproj" />
     </ItemGroup>
 
 </Project>
