--- a/EntityFrameworkCore.LibSql/EntityFrameworkCore.LibSql.csproj
+++ b/EntityFrameworkCore.LibSql/EntityFrameworkCore.LibSql.csproj
@@ -17,6 +17,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="8.0.0" />
     </ItemGroup>
 
     <ItemGroup>
